# msbuild-rs

./: Cargo.toml  PRD.md  README.md  audit-results.json  deny.toml  renovate.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  update-devcontainer.yml
docs/: renovate.md
sample_projects/: common.props  conditional.proj  conditional_release.proj  config.xml  error_test.proj  readme.txt  simple.proj  with_imports.proj
src/: evaluation.rs  expression.rs  logger.rs  main.rs  object_model.rs  parser.rs  tasks.rs  tests.rs
