[package]
name = "msbuild-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
quick-xml = "0.31"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.0.2"

[dev-dependencies]
tempfile = "3.8"
